Backed out changeset c76a33e9a09d (bug 1911736) for causing mochitest failures  browser_osPicker.js CLOSED TREE
UltraBlame original commit: 5ba9519a61269addfc4f80bd6bd386e41df44c46

--- a/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
+++ b/dom/base/test/useractivation/test_popup_blocker_mouse_event.html
@@ -136,10 +136,21 @@ div
 <
 script
 >
-var
+const
 experimental
 =
-false
+SpecialPowers
+.
+getBoolPref
+(
+"
+dom
+.
+popup
+.
+experimental
+"
+)
 ;
 function
 sendMouseEvent
@@ -425,109 +436,13 @@ target
 "
 )
 ;
-async
-function
-beginTest
+add_task
 (
-)
-{
-if
-(
-!
-experimental
-)
-{
-info
-(
-"
-NOT
-EXPERIMENTAL
-"
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-[
-"
-dom
-.
-popup
-.
-experimental
-"
-false
-]
-]
-}
-)
-;
-}
-else
-{
-info
-(
-"
-EXPERIMENTAL
-"
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-[
-"
-dom
-.
-popup
-.
-experimental
-"
-true
-]
-]
-}
-)
-;
-}
-}
-async
-function
-endTest
-(
-)
-{
-await
-SpecialPowers
-.
-popPrefEnv
-(
-)
-;
-}
-async
 function
 testMouseDownUpMove
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 Left
@@ -661,23 +576,16 @@ mouseup
 checkBlockOpenPopup
 )
 ;
-await
-endTest
-(
+}
 )
 ;
-}
-async
+add_task
+(
 function
 testMouseClick
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 Left
@@ -704,23 +612,16 @@ click
 checkAllowOpenPopup
 )
 ;
-await
-endTest
-(
+}
 )
 ;
-}
-async
+add_task
+(
 function
 testMouseAuxclick
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 Middle
@@ -773,51 +674,7 @@ auxclick
 checkAllowOpenPopup
 )
 ;
-await
-endTest
-(
-)
-;
 }
-add_task
-(
-testMouseDownUpMove
-)
-;
-add_task
-(
-testMouseClick
-)
-;
-add_task
-(
-testMouseAuxclick
-)
-;
-add_task
-(
-(
-)
-=
->
-experimental
-=
-true
-)
-;
-add_task
-(
-testMouseDownUpMove
-)
-;
-add_task
-(
-testMouseClick
-)
-;
-add_task
-(
-testMouseAuxclick
 )
 ;
 <
