--- a/dom/base/test/useractivation/test_popup_blocker_pointer_event.html
+++ b/dom/base/test/useractivation/test_popup_blocker_pointer_event.html
@@ -136,10 +136,21 @@ div
 <
 script
 >
-let
+const
 experimental
 =
-false
+SpecialPowers
+.
+getBoolPref
+(
+"
+dom
+.
+popup
+.
+experimental
+"
+)
 ;
 function
 sendMouseEvent
@@ -353,6 +364,74 @@ function
 (
 )
 {
+if
+(
+experimental
+)
+{
+/
+/
+This
+is
+a
+rather
+fragile
+test
+when
+experimental
+pref
+isn
+'
+t
+enabled
+.
+/
+/
+Use
+default
+prefs
+in
+experimental
+case
+.
+SpecialPowers
+.
+wrap
+(
+document
+)
+.
+clearUserGestureActivation
+(
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+/
+/
+Enable
+popup
+blocker
+[
+"
+dom
+.
+disable_open_during_load
+"
+true
+]
+]
+}
+)
+;
+}
 const
 DENY_ACTION
 =
@@ -481,158 +560,14 @@ target
 "
 )
 ;
-async
-function
-beginTest
+add_task
 (
-)
-{
-if
-(
-!
-experimental
-)
-{
-info
-(
-"
-NOT
-EXPERIMENTAL
-"
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-[
-"
-dom
-.
-popup
-.
-experimental
-"
-false
-]
-]
-}
-)
-;
-}
-else
-{
-info
-(
-"
-EXPERIMENTAL
-"
-)
-;
-/
-/
-This
-is
-a
-rather
-fragile
-test
-when
-experimental
-pref
-isn
-'
-t
-enabled
-.
-/
-/
-Use
-default
-prefs
-in
-experimental
-case
-.
-SpecialPowers
-.
-wrap
-(
-document
-)
-.
-clearUserGestureActivation
-(
-)
-;
-await
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-set
-:
-[
-[
-"
-dom
-.
-popup
-.
-experimental
-"
-true
-]
-/
-/
-Enable
-popup
-blocker
-[
-"
-dom
-.
-disable_open_during_load
-"
-true
-]
-]
-}
-)
-;
-}
-}
-async
-function
-endTest
-(
-)
-{
-await
-SpecialPowers
-.
-popPrefEnv
-(
-)
-;
-}
 async
 function
 testPointerEventDefault
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 By
@@ -787,24 +722,17 @@ pointerup
 checkBlockOpenPopup
 )
 ;
-await
-endTest
-(
+}
 )
 ;
-}
-;
+add_task
+(
 async
 function
 testPointerEventAddPointerDownToPref
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 Adding
@@ -978,30 +906,17 @@ pointerup
 checkBlockOpenPopup
 )
 ;
-await
-SpecialPowers
-.
-popPrefEnv
-(
-)
-;
-await
-endTest
-(
-)
-;
 }
+)
+;
+add_task
+(
 async
 function
 testPointerEventAddPointerMoveToPref
 (
 )
 {
-await
-beginTest
-(
-)
-;
 /
 /
 Adding
@@ -1181,58 +1096,7 @@ pointerup
 checkBlockOpenPopup
 )
 ;
-await
-SpecialPowers
-.
-popPrefEnv
-(
-)
-;
-await
-endTest
-(
-)
-;
 }
-add_task
-(
-testPointerEventDefault
-)
-;
-add_task
-(
-testPointerEventAddPointerDownToPref
-)
-;
-add_task
-(
-testPointerEventAddPointerMoveToPref
-)
-;
-add_task
-(
-(
-)
-=
->
-experimental
-=
-true
-)
-;
-add_task
-(
-testPointerEventDefault
-)
-;
-add_task
-(
-testPointerEventAddPointerDownToPref
-)
-;
-add_task
-(
-testPointerEventAddPointerMoveToPref
 )
 ;
 <
