Bug 1921633 - Web Manifest: case-insensitive parsing of the "dir" member r=saschanaz
for alignment between engines: https://github.com/w3c/manifest/issues/1142

Differential Revision: https://phabricator.services.mozilla.com/D224984

UltraBlame original commit: e84af16594ccb95ff6314fcaa98422f737df7aad

--- a/dom/manifest/test/test_ManifestProcessor_dir.html
+++ b/dom/manifest/test/test_ManifestProcessor_dir.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1258899
+-
+-
+>
+<
 head
 >
 <
@@ -199,6 +223,9 @@ expected
 Test
 valid
 values
+-
+case
+insensitive
 *
 /
 var
@@ -213,6 +240,15 @@ rtl
 "
 "
 auto
+"
+"
+LTR
+"
+"
+RtL
+"
+"
+AuTo
 "
 ]
 ;
@@ -268,6 +304,10 @@ result
 .
 dir
 dir
+.
+toLowerCase
+(
+)
 expected
 )
 ;
@@ -343,6 +383,10 @@ result
 .
 dir
 dir
+.
+toLowerCase
+(
+)
 expected
 )
 ;
@@ -359,12 +403,6 @@ var
 invalidDirs
 =
 [
-"
-LTR
-"
-"
-RtL
-"
 fooo
 {
 whiteSpace
@@ -382,9 +420,6 @@ value
 ltr
 rtl
 auto
-"
-"
-AuTo
 "
 ]
 ;
