Bug 1920799 - Add a new messaging surface to the AppMenu and PXI menus for describing the value of signing into an FxA. r=pdahiya,Gijs,desktop-theme-reviewers,omc-reviewers,home-newtab-reviewers,fluent-reviewers,hjones,skhamis,nbarrett
Developing tests in a later patch in this series.

Differential Revision: https://phabricator.services.mozilla.com/D223409

UltraBlame original commit: e81d1a9c3077ab3a308ac065ac62a685d38485d3

--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -154,6 +154,29 @@ appMenu
 -
 fxa
 -
+menu
+-
+message
+"
+closemenu
+=
+"
+none
+"
+>
+<
+/
+toolbaritem
+>
+<
+toolbaritem
+id
+=
+"
+appMenu
+-
+fxa
+-
 status2
 "
 closemenu
@@ -5581,6 +5604,29 @@ subview
 -
 body
 "
+>
+<
+toolbaritem
+id
+=
+"
+PanelUI
+-
+fxa
+-
+menu
+-
+message
+"
+closemenu
+=
+"
+none
+"
+>
+<
+/
+toolbaritem
 >
 <
 toolbarbutton
