Bug 1923251 - part 1: Make `HTMLEditor` clean up unnecessary padding line break when inserting something immediately before it r=m_kato
Both Chrome and Safari clean up unnecessary padding line breaks when they become
unnecessary.  Therefore, we should follow that.

Differential Revision: https://phabricator.services.mozilla.com/D225038

UltraBlame original commit: b61267a75e51b6dbfcef71242d342f256e65adb4

--- a/editor/libeditor/tests/test_bug1330796.html
+++ b/editor/libeditor/tests/test_bug1330796.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1330796
+-
+-
+>
+<
 head
 >
 <
@@ -432,9 +456,6 @@ span
 "
 x
 <
-br
->
-<
 span
 style
 =
@@ -518,9 +539,6 @@ span
 >
 x
 <
-br
->
-<
 span
 style
 =
@@ -600,9 +618,6 @@ br
 span
 >
 x
-<
-br
->
 "
 ]
 /
@@ -679,9 +694,6 @@ br
 span
 >
 x
-<
-br
->
 "
 ]
 /
@@ -828,9 +840,6 @@ br
 span
 >
 x
-<
-br
->
 "
 ]
 /
@@ -887,9 +896,6 @@ span
 br
 >
 x
-<
-br
->
 "
 ]
 ]
