--- a/editor/libeditor/tests/test_bug1385905.html
+++ b/editor/libeditor/tests/test_bug1385905.html
@@ -4,6 +4,30 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+=
+id
+=
+1385905
+-
+-
+>
+<
 html
 >
 <
@@ -389,9 +413,6 @@ innerHTML
 div
 >
 x
-<
-br
->
 <
 /
 div
