--- a/editor/libeditor/tests/test_bug780035.html
+++ b/editor/libeditor/tests/test_bug780035.html
@@ -4,6 +4,30 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+780035
+-
+-
+>
+<
 title
 >
 Test
@@ -222,9 +246,6 @@ div
 div
 >
 x
-<
-br
->
 <
 /
 div
