--- a/editor/libeditor/tests/test_bug787432.html
+++ b/editor/libeditor/tests/test_bug787432.html
@@ -4,6 +4,30 @@ DOCTYPE
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+787432
+-
+-
+>
+<
 title
 >
 Test
@@ -188,9 +212,6 @@ x
 <
 /
 span
->
-<
-br
 >
 '
 "
