--- a/testing/web-platform/tests/editing/plaintext-only/insertText.html
+++ b/testing/web-platform/tests/editing/plaintext-only/insertText.html
@@ -421,6 +421,109 @@ of
 initialInnerHTML
 :
 "
+{
+}
+<
+br
+>
+"
+insertText
+:
+"
+"
+expected
+:
+collapseWhiteSpaces
+?
+(
+useBR
+?
+[
+"
+<
+br
+>
+"
+"
+&
+nbsp
+;
+"
+]
+:
+[
+"
+<
+br
+>
+"
+"
+\
+n
+"
+"
+&
+nbsp
+;
+"
+]
+)
+:
+"
+"
+}
+{
+initialInnerHTML
+:
+"
+{
+}
+<
+br
+>
+"
+insertText
+:
+"
+a
+"
+expected
+:
+"
+a
+"
+}
+{
+initialInnerHTML
+:
+"
+[
+]
+\
+n
+"
+skipIf
+:
+(
+)
+=
+>
+useBR
+insertText
+:
+"
+a
+"
+expected
+:
+"
+a
+"
+}
+{
+initialInnerHTML
+:
+"
 A
 [
 ]
@@ -1096,9 +1199,6 @@ a
 "
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -1131,146 +1231,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-aB
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-aB
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-aB
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-aB
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -1363,9 +1323,6 @@ b
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -1398,146 +1355,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-AB
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-AB
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -1596,7 +1413,6 @@ expected
 :
 useBR
 ?
-[
 "
 <
 p
@@ -1631,44 +1447,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 :
 [
 "
@@ -1729,78 +1507,6 @@ p
 b
 >
 a
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-\
-n
 <
 /
 b
@@ -2145,7 +1851,6 @@ expected
 :
 useBR
 ?
-[
 "
 <
 p
@@ -2167,31 +1872,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-AB
-<
-br
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 :
 [
 "
@@ -2223,98 +1903,8 @@ p
 b
 >
 AB
-<
-br
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
 \
 na
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
-\
-na
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
-\
-na
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-AB
-<
-br
->
-a
-\
-n
 <
 /
 b
@@ -2417,7 +2007,6 @@ expected
 :
 useBR
 ?
-[
 "
 <
 p
@@ -2438,30 +2027,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-<
-br
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 :
 [
 "
@@ -2491,94 +2056,8 @@ p
 <
 b
 >
-<
-br
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
 \
 na
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-\
-na
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-<
-br
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-\
-na
-<
-br
->
 <
 /
 b
@@ -2675,9 +2154,6 @@ b
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -2695,86 +2171,6 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -2896,9 +2292,6 @@ style
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -2924,118 +2317,6 @@ B
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -3157,9 +2438,6 @@ style
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -3185,118 +2463,6 @@ B
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -3418,9 +2584,6 @@ style
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -3446,118 +2609,6 @@ B
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-B
-<
-/
-p
->
-"
-]
 }
 {
 initialInnerHTML
@@ -3671,9 +2722,6 @@ style
 .
 expected
 :
-useBR
-?
-[
 "
 <
 p
@@ -3706,150 +2754,31 @@ b
 p
 >
 "
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-]
-:
-[
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-<
-br
->
-<
-/
-b
->
-<
-/
-p
->
-"
-"
-<
-p
->
-<
-b
->
-A
-<
-/
-b
->
-<
-/
-p
->
-<
-p
->
-<
-b
->
-a
-\
-n
-<
-/
-b
->
-<
-/
-p
->
-"
-]
 }
 ]
 )
 {
+if
+(
+data
+.
+skipIf
+!
+=
+=
+undefined
+&
+&
+data
+.
+skipIf
+(
+)
+)
+{
+continue
+;
+}
 test
 (
 (
@@ -3941,6 +2870,19 @@ false
 data
 .
 insertText
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 "
 )
@@ -3949,6 +2891,19 @@ when
 data
 .
 initialInnerHTML
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 {
 data
@@ -3960,6 +2915,19 @@ and
 data
 .
 prepareDescription
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 :
 "
@@ -4059,6 +3027,19 @@ Typing
 data
 .
 insertText
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 "
 when
@@ -4066,6 +3047,19 @@ when
 data
 .
 initialInnerHTML
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 {
 data
@@ -4077,6 +3071,19 @@ and
 data
 .
 prepareDescription
+.
+replaceAll
+(
+"
+\
+n
+"
+"
+\
+\
+n
+"
+)
 }
 :
 "
