--- a/widget/tests/window_composition_text_querycontent.xhtml
+++ b/widget/tests/window_composition_text_querycontent.xhtml
@@ -66471,9 +66471,6 @@ innerHTML
 "
 abc
 d
-<
-br
->
 "
 "
 runBug1530649Test
@@ -66516,9 +66513,6 @@ innerHTML
 "
 abc
 d
-<
-br
->
 "
 "
 runBug1530649Test
@@ -98402,6 +98396,9 @@ flushNotifications
 "
 [
 ]
+<
+br
+>
 "
 description
 =
@@ -98459,7 +98456,7 @@ removedLength
 2
 addedLength
 :
-0
+kLFLen
 }
 )
 ;
@@ -99356,22 +99353,15 @@ getNativeText
 aB
 \
 nd
-\
-n
 "
 )
 .
 length
 addedLength
 :
-getNativeText
-(
 "
 aBd
-\
-n
 "
-)
 .
 length
 }
@@ -100106,8 +100096,6 @@ getNativeText
 a
 \
 nd
-\
-n
 "
 )
 .
@@ -100118,8 +100106,6 @@ getNativeText
 (
 "
 ad
-\
-n
 "
 )
 .
@@ -100336,8 +100322,6 @@ getNativeText
 "
 \
 nad
-\
-n
 "
 )
 .
@@ -100378,9 +100362,14 @@ offset
 offsetAtContainer
 removedLength
 :
-2
-+
-kLFLen
+getNativeText
+(
+"
+ad
+"
+)
+.
+length
 addedLength
 :
 getNativeText
@@ -107842,6 +107831,440 @@ true
 )
 ;
 }
+function
+runPaddingLineBreakTest
+(
+)
+{
+const
+selection
+=
+windowOfContenteditable
+.
+getSelection
+(
+)
+;
+contenteditable
+.
+focus
+(
+)
+;
+contenteditable
+.
+innerHTML
+=
+"
+<
+p
+>
+<
+br
+>
+<
+/
+p
+>
+"
+;
+selection
+.
+collapse
+(
+contenteditable
+.
+querySelector
+(
+"
+p
+"
+)
+0
+)
+;
+synthesizeCompositionChange
+(
+{
+composition
+:
+{
+string
+:
+"
+a
+"
+clauses
+:
+[
+{
+length
+:
+1
+attr
+:
+COMPOSITION_ATTR_RAW_CLAUSE
+}
+]
+}
+}
+)
+;
+is
+(
+contenteditable
+.
+innerHTML
+"
+<
+p
+>
+a
+<
+/
+p
+>
+"
+"
+Padding
+<
+br
+>
+for
+empty
+paragraph
+should
+be
+removed
+when
+composition
+string
+does
+not
+end
+with
+collapsible
+white
+-
+space
+"
+)
+;
+synthesizeComposition
+(
+{
+type
+:
+"
+compositioncommitasis
+"
+}
+)
+;
+synthesizeKey
+(
+"
+z
+"
+{
+accelKey
+:
+true
+}
+)
+;
+is
+(
+contenteditable
+.
+innerHTML
+"
+<
+p
+>
+<
+br
+>
+<
+/
+p
+>
+"
+"
+Undo
+should
+restore
+the
+padding
+<
+br
+>
+for
+the
+empty
+paragraph
+too
+"
+)
+;
+contenteditable
+.
+innerHTML
+=
+"
+<
+p
+>
+<
+br
+>
+<
+/
+p
+>
+"
+;
+selection
+.
+collapse
+(
+contenteditable
+.
+querySelector
+(
+"
+p
+"
+)
+0
+)
+;
+synthesizeCompositionChange
+(
+{
+composition
+:
+{
+string
+:
+"
+a
+"
+clauses
+:
+[
+{
+length
+:
+1
+attr
+:
+COMPOSITION_ATTR_RAW_CLAUSE
+}
+]
+}
+}
+)
+;
+synthesizeCompositionChange
+(
+{
+composition
+:
+{
+string
+:
+"
+a
+"
+clauses
+:
+[
+{
+length
+:
+2
+attr
+:
+COMPOSITION_ATTR_RAW_CLAUSE
+}
+]
+}
+}
+)
+;
+is
+(
+contenteditable
+.
+innerHTML
+"
+<
+p
+>
+a
+<
+br
+>
+<
+/
+p
+>
+"
+"
+Padding
+<
+br
+>
+should
+be
+inserted
+after
+composition
+string
+when
+it
+ends
+with
+a
+collapsible
+white
+-
+space
+"
+)
+;
+synthesizeCompositionChange
+(
+{
+composition
+:
+{
+string
+:
+"
+a
+b
+"
+clauses
+:
+[
+{
+length
+:
+3
+attr
+:
+COMPOSITION_ATTR_RAW_CLAUSE
+}
+]
+}
+}
+)
+;
+is
+(
+contenteditable
+.
+innerHTML
+"
+<
+p
+>
+a
+b
+<
+/
+p
+>
+"
+"
+Padding
+<
+br
+>
+should
+be
+removed
+again
+when
+the
+last
+character
+becomes
+visible
+character
+"
+)
+;
+synthesizeComposition
+(
+{
+type
+:
+"
+compositioncommitasis
+"
+}
+)
+;
+synthesizeKey
+(
+"
+z
+"
+{
+accelKey
+:
+true
+}
+)
+;
+is
+(
+contenteditable
+.
+innerHTML
+"
+<
+p
+>
+<
+br
+>
+<
+/
+p
+>
+"
+"
+Undo
+should
+restore
+the
+padding
+<
+br
+>
+for
+the
+empty
+paragraph
+with
+canceling
+the
+composition
+"
+)
+;
+contenteditable
+.
+innerHTML
+=
+"
+"
+;
+}
 async
 function
 runTest
@@ -108110,6 +108533,10 @@ runQueryPasswordTest
 )
 ;
 runCSSTransformTest
+(
+)
+;
+runPaddingLineBreakTest
 (
 )
 ;
