--- a/editor/libeditor/tests/test_bug551704.html
+++ b/editor/libeditor/tests/test_bug551704.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+551704
+-
+-
+>
+<
 head
 >
 <
@@ -978,9 +1002,6 @@ div
 div
 >
 def
-<
-br
->
 <
 /
 div
