Bug 1923251 - part 2: Make `HTMLEditor` clean up unnecessary padding line breaks when deleting something immediately before it r=m_kato
Unfortunately, the code does not work well only in `white-space: pre-line`.
The rending itself is broken, so, it won't work well on Firefox anyway and
this style is not so useful with editable content.  Therefore, this patch
does not fix the issue.

Differential Revision: https://phabricator.services.mozilla.com/D225039

UltraBlame original commit: 526e6dccb1374a384096483dda245663d254364b

--- a/editor/libeditor/tests/test_bug1315065.html
+++ b/editor/libeditor/tests/test_bug1315065.html
@@ -7,6 +7,30 @@ HTML
 html
 >
 <
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1315065
+-
+-
+>
+<
 head
 >
 <
@@ -748,7 +772,7 @@ p
 childNodes
 .
 length
-5
+4
 kDescription
 +
 "
@@ -758,7 +782,7 @@ p
 >
 should
 have
-5
+4
 children
 after
 pressing
