Backed out 2 changesets (bug 1923251) for causing build bustages in HTMLEditor.cpp. CLOSED TREE
Backed out changeset 526e6dccb137 (bug 1923251)
Backed out changeset b61267a75e51 (bug 1923251)

UltraBlame original commit: 5a81f48b101863e85d1979bef24d2fd3a2787880

--- a/editor/libeditor/tests/test_bug1397412.xhtml
+++ b/editor/libeditor/tests/test_bug1397412.xhtml
@@ -364,6 +364,9 @@ xx
 br
 >
 t
+<
+br
+>
 "
 ;
 var
@@ -519,12 +522,11 @@ t
 should
 be
 inserted
-after
-the
-first
+between
 <
 br
 >
+s
 "
 )
 ;
