Bug 1913339: part 3) Make some sub-tests of <block-string-assignment-to-Element-insertAdjacentHTML.html> less dependent on each other. r=smaug
Allows to let them pass on Gecko too, given a Gecko-specific bug (see
the test). The text-to-HTML transformation, which is what the test is
supposed to test, is still tested.

Differential Revision: https://phabricator.services.mozilla.com/D219639

UltraBlame original commit: b741269269ef7e92227f0edbf8e5e3ddc4eddbbc

--- a/testing/web-platform/tests/trusted-types/block-string-assignment-to-Element-insertAdjacentHTML.html
+++ b/testing/web-platform/tests/trusted-types/block-string-assignment-to-Element-insertAdjacentHTML.html
@@ -951,6 +951,70 @@ throws
 ;
 /
 /
+Due
+to
+a
+Gecko
+-
+specific
+bug
+/
+/
+(
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1270944
+)
+adjacent
+nodes
+are
+/
+/
+merged
+.
+Remove
+the
+children
+to
+let
+the
+test
+pass
+on
+Gecko
+/
+/
+too
+.
+function
+removeChildrenBecauseOfGeckoBug
+(
+element
+)
+{
+element
+.
+innerHTML
+=
+null
+;
+}
+/
+/
 After
 default
 policy
@@ -1075,6 +1139,11 @@ data
 RESULTS
 .
 HTML
+)
+;
+removeChildrenBecauseOfGeckoBug
+(
+d
 )
 ;
 d
@@ -1285,6 +1354,11 @@ data
 "
 null
 "
+)
+;
+removeChildrenBecauseOfGeckoBug
+(
+d
 )
 ;
 d
