Bug 1918712: Context menu to remove tab from group r=dao,fluent-reviewers,tabbrowser-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D224480

UltraBlame original commit: fe85a4baebb60ddc52511c12bd80635bd7e2a644

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -266,6 +266,52 @@ menupopup
 menu
 >
 <
+menuitem
+id
+=
+"
+context_ungroupTab
+"
+data
+-
+lazy
+-
+l10n
+-
+id
+=
+"
+tab
+-
+context
+-
+ungroup
+-
+tab
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+groupCount
+"
+:
+1
+}
+'
+hidden
+=
+"
+true
+"
+/
+>
+<
 menuseparator
 /
 >
