--- a/toolkit/content/tests/widgets/test_moz_lit_element.html
+++ b/toolkit/content/tests/widgets/test_moz_lit_element.html
@@ -444,6 +444,41 @@ attribute
 rename
 "
 }
+mappedAttribute
+:
+{
+type
+:
+String
+mapped
+:
+true
+attribute
+:
+"
+mapped
+"
+}
+accessKey
+:
+{
+type
+:
+String
+mapped
+:
+true
+}
+ariaLabel
+:
+{
+type
+:
+String
+mapped
+:
+true
+}
 }
 ;
 render
@@ -643,6 +678,170 @@ rendered
 automatically
 on
 upgrade
+"
+)
+;
+}
+)
+;
+add_task
+(
+async
+function
+testMappedAttributes
+(
+)
+{
+let
+el
+=
+await
+renderTemplate
+(
+html
+<
+example
+-
+element
+accesskey
+=
+"
+f
+"
+mapped
+=
+"
+mapped
+-
+val
+"
+aria
+-
+label
+=
+"
+Label
+!
+"
+>
+<
+/
+example
+-
+element
+>
+)
+;
+is
+(
+el
+.
+accessKey
+"
+f
+"
+"
+accessKey
+property
+is
+correct
+"
+)
+;
+ok
+(
+!
+el
+.
+hasAttribute
+(
+"
+accesskey
+"
+)
+"
+accesskey
+attribute
+was
+removed
+"
+)
+;
+is
+(
+el
+.
+mappedAttribute
+"
+mapped
+-
+val
+"
+"
+mappedAttribute
+is
+mapped
+with
+custom
+attribute
+"
+)
+;
+ok
+(
+!
+el
+.
+hasAttribute
+(
+"
+mapped
+"
+)
+"
+mapped
+attribute
+was
+removed
+"
+)
+;
+is
+(
+el
+.
+ariaLabel
+"
+Label
+!
+"
+"
+ariaLabel
+property
+is
+set
+"
+)
+;
+ok
+(
+!
+el
+.
+hasAttribute
+(
+"
+aria
+-
+label
+"
+)
+"
+aria
+-
+label
+was
+removed
 "
 )
 ;
