--- a/toolkit/content/tests/widgets/test_moz_lit_element.html
+++ b/toolkit/content/tests/widgets/test_moz_lit_element.html
@@ -254,6 +254,10 @@ rename
 Also
 renamed
 !
+.
+accesskey
+=
+E
 }
 ]
 ;
@@ -459,7 +463,7 @@ attribute
 mapped
 "
 }
-accessKey
+ariaLabel
 :
 {
 type
@@ -469,13 +473,16 @@ mapped
 :
 true
 }
-ariaLabel
+accessKey
 :
 {
 type
 :
 String
 mapped
+:
+true
+fluent
 :
 true
 }
@@ -501,6 +508,10 @@ tooltipText
 this
 .
 renamedAttribute
++
+this
+.
+accessKey
 ;
 }
 updated
@@ -612,6 +623,7 @@ label
 message
 tooltiptext
 rename
+accesskey
 "
 "
 data
@@ -671,6 +683,7 @@ tooltiptext
 Also
 renamed
 !
+E
 "
 "
 Text
@@ -678,6 +691,43 @@ rendered
 automatically
 on
 upgrade
+"
+)
+;
+is
+(
+el
+.
+accessKey
+"
+E
+"
+"
+accessKey
+is
+mapped
+with
+custom
+attribute
+"
+)
+;
+ok
+(
+!
+el
+.
+hasAttribute
+(
+"
+accesskey
+"
+)
+"
+renamed
+attribute
+was
+removed
 "
 )
 ;
