Bug 1917303 - Use MozBaseInputElement for MozRadio and MozCheckbox r=reusable-components-reviewers,desktop-theme-reviewers,hjones
Depends on D222039

Differential Revision: https://phabricator.services.mozilla.com/D222040

UltraBlame original commit: affc4eac7db07097c3b16a9059a64e2cc1710d40

--- a/toolkit/content/tests/widgets/test_moz_checkbox.html
+++ b/toolkit/content/tests/widgets/test_moz_checkbox.html
@@ -796,6 +796,10 @@ mozCheckbox1
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -822,6 +826,10 @@ mozCheckbox2
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -848,6 +856,10 @@ mozCheckbox3
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -874,6 +886,10 @@ mozCheckbox4
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -900,6 +916,10 @@ mozCheckbox5
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -926,6 +946,10 @@ mozCheckbox6
 labelEl
 .
 innerText
+.
+trim
+(
+)
 "
 test
 label
@@ -939,7 +963,7 @@ moz
 -
 checkbox
 -
-4
+6
 is
 correct
 "
@@ -1006,7 +1030,7 @@ ok
 !
 mozCheckbox1
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1032,7 +1056,7 @@ ok
 (
 mozCheckbox2
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1080,7 +1104,7 @@ ok
 !
 mozCheckbox3
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1129,7 +1153,7 @@ ok
 !
 mozCheckbox4
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1178,7 +1202,7 @@ ok
 !
 mozCheckbox5
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1227,7 +1251,7 @@ ok
 !
 mozCheckbox6
 .
-checkboxEl
+inputEl
 .
 checked
 "
@@ -1258,7 +1282,7 @@ is
 (
 mozCheckbox2
 .
-checkboxEl
+inputEl
 .
 name
 "
@@ -1284,7 +1308,7 @@ is
 (
 mozCheckbox1
 .
-checkboxEl
+inputEl
 .
 value
 "
@@ -1304,7 +1328,7 @@ is
 (
 mozCheckbox2
 .
-checkboxEl
+inputEl
 .
 value
 "
@@ -1324,7 +1348,7 @@ is
 (
 mozCheckbox3
 .
-checkboxEl
+inputEl
 .
 value
 "
@@ -1489,7 +1513,7 @@ ok
 !
 mozCheckbox1
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1516,7 +1540,7 @@ ok
 !
 mozCheckbox2
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1542,7 +1566,7 @@ ok
 (
 mozCheckbox3
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1568,7 +1592,7 @@ ok
 !
 mozCheckbox4
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1595,7 +1619,7 @@ ok
 !
 mozCheckbox5
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1622,7 +1646,7 @@ ok
 !
 mozCheckbox6
 .
-checkboxEl
+inputEl
 .
 disabled
 "
@@ -1970,7 +1994,7 @@ synthesizeMouseAtCenter
 (
 mozCheckbox1
 .
-checkboxEl
+inputEl
 {
 }
 )
@@ -2429,7 +2453,7 @@ synthesizeMouseAtCenter
 (
 mozCheckbox3
 .
-checkboxEl
+inputEl
 {
 }
 )
@@ -2773,7 +2797,7 @@ is
 (
 mozCheckbox4
 .
-checkboxEl
+inputEl
 .
 getAttribute
 (
@@ -2913,7 +2937,7 @@ is
 (
 mozCheckbox5
 .
-checkboxEl
+inputEl
 .
 getAttribute
 (
@@ -3022,7 +3046,7 @@ is
 (
 mozCheckbox6
 .
-checkboxEl
+inputEl
 .
 getAttribute
 (
@@ -3152,7 +3176,7 @@ shadowRoot
 activeElement
 mozCheckbox1
 .
-checkboxEl
+inputEl
 "
 Checkbox
 input
@@ -3239,7 +3263,7 @@ shadowRoot
 activeElement
 mozCheckbox1
 .
-checkboxEl
+inputEl
 "
 Checkbox
 input
