--- a/toolkit/content/tests/widgets/test_moz_radio_group.html
+++ b/toolkit/content/tests/widgets/test_moz_radio_group.html
@@ -768,7 +768,7 @@ is
 (
 selectedButton
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -801,7 +801,7 @@ is
 (
 selectedButton
 .
-radioButton
+inputEl
 .
 tabIndex
 0
@@ -856,7 +856,7 @@ is
 (
 button
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -888,7 +888,7 @@ is
 (
 button
 .
-radioButton
+inputEl
 .
 tabIndex
 -
@@ -1851,7 +1851,7 @@ is
 (
 button
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -2799,7 +2799,7 @@ synthesizeMouseAtCenter
 (
 thirdButton
 .
-radioButton
+inputEl
 {
 }
 )
@@ -3316,7 +3316,7 @@ synthesizeMouseAtCenter
 (
 firstButton
 .
-radioButton
+inputEl
 {
 }
 )
@@ -3677,7 +3677,7 @@ checkElementState
 (
 button
 .
-radioButton
+inputEl
 )
 All
 radio
@@ -3737,7 +3737,7 @@ ok
 (
 firstRadioButton
 .
-radioButton
+inputEl
 .
 hasAttribute
 (
@@ -3769,7 +3769,7 @@ ok
 !
 button
 .
-radioButton
+inputEl
 .
 hasAttribute
 (
@@ -3897,7 +3897,7 @@ ok
 (
 firstRadioButton
 .
-radioButton
+inputEl
 .
 hasAttribute
 (
@@ -3929,7 +3929,7 @@ ok
 !
 button
 .
-radioButton
+inputEl
 .
 hasAttribute
 (
@@ -4182,7 +4182,7 @@ is
 (
 firstButton
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -4236,7 +4236,7 @@ is
 (
 secondButton
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -4314,7 +4314,7 @@ is
 (
 thirdButton
 .
-radioButton
+inputEl
 .
 getAttribute
 (
@@ -4564,7 +4564,7 @@ shadowRoot
 activeElement
 firstRadio
 .
-radioButton
+inputEl
 "
 Radio
 input
@@ -4653,7 +4653,7 @@ shadowRoot
 activeElement
 firstRadio
 .
-radioButton
+inputEl
 "
 Radio
 input
