--- a/dom/media/webaudio/test/test_decoderDelay.html
+++ b/dom/media/webaudio/test/test_decoderDelay.html
@@ -1004,6 +1004,46 @@ fuzz
 {
 }
 }
+{
+/
+/
+Bug
+1924925
+-
+Valid
+flac
+file
+that
+is
+very
+small
+.
+"
+path
+"
+:
+"
+tiny
+.
+flac
+"
+"
+samplerate
+"
+:
+22500
+"
+frameCount
+"
+:
+2271
+"
+fuzz
+"
+:
+{
+}
+}
 ]
 ;
 var
