--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/toggle-events.tentative.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/toggle-events.tentative.html
@@ -26,7 +26,9 @@ org
 link
 rel
 =
+"
 author
+"
 title
 =
 "
@@ -45,6 +47,7 @@ co
 .
 uk
 "
+/
 >
 <
 link
@@ -1493,6 +1496,545 @@ beforetoggle
 re
 -
 opens
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+const
+abortController
+=
+new
+AbortController
+(
+)
+;
+const
+signal
+=
+abortController
+.
+signal
+;
+const
+mydialog
+=
+document
+.
+getElementById
+(
+"
+mydialog
+"
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+{
+abortController
+.
+abort
+(
+)
+;
+mydialog
+.
+close
+(
+)
+;
+document
+.
+body
+.
+prepend
+(
+mydialog
+)
+;
+}
+)
+;
+mydialog
+.
+addEventListener
+(
+"
+beforetoggle
+"
+(
+)
+=
+>
+{
+mydialog
+.
+remove
+(
+)
+;
+}
+{
+once
+:
+true
+}
+)
+;
+let
+toggleEventCounter
+=
+0
+;
+mydialog
+.
+addEventListener
+(
+"
+toggle
+"
+(
+event
+)
+=
+>
+{
+toggleEventCounter
++
+=
+1
+;
+}
+{
+signal
+}
+)
+;
+mydialog
+[
+methodName
+]
+(
+)
+;
+assert_false
+(
+mydialog
+.
+isConnected
+"
+Dialog
+is
+not
+connected
+"
+)
+;
+if
+(
+methodName
+=
+=
+'
+show
+'
+)
+{
+assert_true
+(
+mydialog
+.
+open
+"
+Dialog
+did
+open
+"
+)
+;
+}
+else
+{
+assert_false
+(
+mydialog
+.
+open
+"
+Dialog
+did
+not
+open
+"
+)
+;
+assert_false
+(
+mydialog
+.
+matches
+(
+'
+:
+modal
+'
+)
+"
+Dialog
+is
+not
+modal
+"
+)
+;
+}
+await
+waitForTick
+(
+)
+;
+if
+(
+methodName
+=
+=
+'
+show
+'
+)
+{
+assert_equals
+(
+toggleEventCounter
+1
+"
+toggle
+event
+was
+fired
+"
+)
+;
+}
+else
+{
+assert_equals
+(
+toggleEventCounter
+0
+"
+toggle
+event
+not
+fired
+"
+)
+;
+}
+}
+dialog
+.
+{
+methodName
+}
+(
+)
+should
+not
+open
+if
+beforetoggle
+removes
+)
+;
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+const
+abortController
+=
+new
+AbortController
+(
+)
+;
+const
+signal
+=
+abortController
+.
+signal
+;
+t
+.
+add_cleanup
+(
+async
+(
+)
+=
+>
+{
+try
+{
+mydialog
+.
+hidePopover
+(
+)
+;
+}
+catch
+{
+}
+try
+{
+mydialog
+.
+close
+(
+)
+;
+}
+catch
+{
+}
+mydialog
+.
+removeAttribute
+(
+'
+popover
+'
+)
+;
+abortController
+.
+abort
+(
+)
+;
+await
+waitForTick
+(
+)
+;
+}
+)
+;
+mydialog
+.
+setAttribute
+(
+'
+popover
+'
+'
+'
+)
+;
+mydialog
+.
+addEventListener
+(
+"
+beforetoggle
+"
+(
+)
+=
+>
+{
+mydialog
+.
+showPopover
+(
+)
+;
+}
+{
+once
+:
+true
+}
+)
+;
+let
+toggleEventCounter
+=
+0
+;
+mydialog
+.
+addEventListener
+(
+"
+toggle
+"
+(
+event
+)
+=
+>
+{
+toggleEventCounter
++
+=
+1
+;
+}
+{
+signal
+}
+)
+;
+mydialog
+[
+methodName
+]
+(
+)
+;
+if
+(
+methodName
+=
+=
+'
+show
+'
+)
+{
+assert_true
+(
+mydialog
+.
+open
+"
+Dialog
+did
+open
+"
+)
+;
+}
+else
+{
+assert_false
+(
+mydialog
+.
+open
+"
+Dialog
+did
+not
+open
+"
+)
+;
+assert_false
+(
+mydialog
+.
+matches
+(
+'
+:
+modal
+'
+)
+"
+Dialog
+is
+not
+modal
+"
+)
+;
+}
+await
+waitForTick
+(
+)
+;
+if
+(
+methodName
+=
+=
+'
+show
+'
+)
+{
+assert_equals
+(
+toggleEventCounter
+2
+"
+toggle
+event
+was
+fired
+for
+show
++
+showPopover
+"
+)
+;
+}
+else
+{
+assert_equals
+(
+toggleEventCounter
+1
+"
+toggle
+event
+was
+fired
+for
+showPopover
+"
+)
+;
+}
+}
+dialog
+.
+{
+methodName
+}
+(
+)
+should
+not
+open
+if
+beforetoggle
+calls
+showPopover
 )
 ;
 }
