Bug 1883162 - Update profiles app menu to latest design using selectable profiles. r=niklas,fluent-reviewers,desktop-theme-reviewers,bolsson,dao
Differential Revision: https://phabricator.services.mozilla.com/D223238

UltraBlame original commit: e7719ffbcf2e52a6140ef9ef107e0284bbef53e1

--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -320,34 +320,10 @@ subviewbutton
 subviewbutton
 -
 nav
-"
-data
+subviewbutton
 -
-l10n
--
-id
-=
+iconic
 "
-appmenuitem
--
-profiles
-"
-data
--
-l10n
--
-args
-=
-'
-{
-"
-profilename
-"
-:
-"
-"
-}
-'
 closemenu
 =
 "
@@ -1711,6 +1687,155 @@ flex
 "
 1
 "
+has
+-
+custom
+-
+header
+=
+"
+true
+"
+>
+<
+box
+id
+=
+"
+PanelUI
+-
+profiles
+-
+header
+"
+class
+=
+"
+panel
+-
+header
+"
+>
+<
+toolbarbutton
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+subviewbutton
+-
+back
+"
+id
+=
+"
+profiles
+-
+appmenu
+-
+back
+-
+button
+"
+tabindex
+=
+"
+0
+"
+closemenu
+=
+"
+none
+"
+/
+>
+<
+html
+:
+h1
+id
+=
+"
+profiles
+-
+header
+-
+title
+"
+>
+<
+html
+:
+span
+id
+=
+"
+profiles
+-
+header
+-
+content
+"
+>
+<
+/
+html
+:
+span
+>
+<
+/
+html
+:
+h1
+>
+<
+toolbarbutton
+id
+=
+"
+profiles
+-
+edit
+-
+this
+-
+profile
+-
+button
+"
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+toolbarbutton
+-
+1
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+edit
+-
+profile
+"
+/
+>
+<
+/
+box
 >
 <
 vbox
@@ -1735,6 +1860,22 @@ profile
 "
 >
 <
+box
+id
+=
+"
+half
+-
+height
+-
+profile
+"
+>
+<
+/
+box
+>
+<
 image
 id
 =
@@ -1751,91 +1892,40 @@ image
 image
 >
 <
-h2
-id
-=
-"
-profile
--
-name
-"
->
-<
-/
-h2
->
-<
-hbox
-id
-=
-"
-this
--
-profile
--
-buttons
-"
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-edit
--
-this
--
-delete
--
-button
-"
-class
-=
-"
-subviewbutton
-toolbarbutton
--
-1
-"
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-delete
--
-this
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-toolbarbutton
--
-1
-"
-/
->
-<
-/
-hbox
->
-<
 /
 vbox
 >
 <
-toolbarseparator
+html
+:
+h2
+id
+=
+"
+profiles
+-
+subtitle
+"
+class
+=
+"
+subview
+-
+subheader
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+other
+-
+profiles
+"
 /
 >
 <
@@ -1853,89 +1943,43 @@ list
 vbox
 >
 <
+toolbarbutton
+id
+=
+"
+profiles
+-
+create
+-
+profile
+-
+button
+"
+class
+=
+"
+subviewbutton
+subviewbutton
+-
+iconic
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+create
+-
+profile
+"
+/
+>
+<
 toolbarseparator
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-close
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-"
-data
--
-l10n
--
-id
-=
-"
-appmenu
--
-close
--
-profile
-"
-data
--
-l10n
--
-args
-=
-'
-{
-"
-profilename
-"
-:
-"
-"
-}
-'
-/
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-create
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-"
-data
--
-l10n
--
-id
-=
-"
-appmenu
--
-create
--
-profile
-"
 /
 >
 <
