Backed out changeset e7719ffbcf2e (bug 1883162) for causing bc failures  browser_sentence_case_strings.js CLOSED TREE
UltraBlame original commit: 4b8c994cd14575f41343cea0b5cbaaa71879ccb1

--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -320,10 +320,34 @@ subviewbutton
 subviewbutton
 -
 nav
-subviewbutton
--
-iconic
 "
+data
+-
+l10n
+-
+id
+=
+"
+appmenuitem
+-
+profiles
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+profilename
+"
+:
+"
+"
+}
+'
 closemenu
 =
 "
@@ -1687,155 +1711,6 @@ flex
 "
 1
 "
-has
--
-custom
--
-header
-=
-"
-true
-"
->
-<
-box
-id
-=
-"
-PanelUI
--
-profiles
--
-header
-"
-class
-=
-"
-panel
--
-header
-"
->
-<
-toolbarbutton
-class
-=
-"
-subviewbutton
-subviewbutton
--
-iconic
-subviewbutton
--
-back
-"
-id
-=
-"
-profiles
--
-appmenu
--
-back
--
-button
-"
-tabindex
-=
-"
-0
-"
-closemenu
-=
-"
-none
-"
-/
->
-<
-html
-:
-h1
-id
-=
-"
-profiles
--
-header
--
-title
-"
->
-<
-html
-:
-span
-id
-=
-"
-profiles
--
-header
--
-content
-"
->
-<
-/
-html
-:
-span
->
-<
-/
-html
-:
-h1
->
-<
-toolbarbutton
-id
-=
-"
-profiles
--
-edit
--
-this
--
-profile
--
-button
-"
-class
-=
-"
-subviewbutton
-subviewbutton
--
-iconic
-toolbarbutton
--
-1
-"
-data
--
-l10n
--
-id
-=
-"
-appmenu
--
-edit
--
-profile
-"
-/
->
-<
-/
-box
 >
 <
 vbox
@@ -1860,22 +1735,6 @@ profile
 "
 >
 <
-box
-id
-=
-"
-half
--
-height
--
-profile
-"
->
-<
-/
-box
->
-<
 image
 id
 =
@@ -1892,40 +1751,91 @@ image
 image
 >
 <
-/
-vbox
->
-<
-html
-:
 h2
 id
 =
 "
+profile
+-
+name
+"
+>
+<
+/
+h2
+>
+<
+hbox
+id
+=
+"
+this
+-
+profile
+-
+buttons
+"
+>
+<
+toolbarbutton
+id
+=
+"
 profiles
 -
-subtitle
+edit
+-
+this
+-
+delete
+-
+button
 "
 class
 =
 "
-subview
+subviewbutton
+toolbarbutton
 -
-subheader
+1
 "
-data
--
-l10n
--
+/
+>
+<
+toolbarbutton
 id
 =
 "
-appmenu
--
-other
--
 profiles
+-
+delete
+-
+this
+-
+profile
+-
+button
 "
+class
+=
+"
+subviewbutton
+toolbarbutton
+-
+1
+"
+/
+>
+<
+/
+hbox
+>
+<
+/
+vbox
+>
+<
+toolbarseparator
 /
 >
 <
@@ -1941,6 +1851,59 @@ list
 <
 /
 vbox
+>
+<
+toolbarseparator
+/
+>
+<
+toolbarbutton
+id
+=
+"
+profiles
+-
+close
+-
+profile
+-
+button
+"
+class
+=
+"
+subviewbutton
+"
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+close
+-
+profile
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+profilename
+"
+:
+"
+"
+}
+'
+/
 >
 <
 toolbarbutton
@@ -1959,9 +1922,6 @@ class
 =
 "
 subviewbutton
-subviewbutton
--
-iconic
 "
 data
 -
@@ -1976,10 +1936,6 @@ create
 -
 profile
 "
-/
->
-<
-toolbarseparator
 /
 >
 <
