Bug 1924463 [wpt PR 48592] - Update Blink to use environment clock timestamps from RTCStats objects., a=testonly
Automatic update from web-platform-tests
Update Blink to use environment clock timestamps from RTCStats objects.

https://webrtc-review.googlesource.com/c/src/+/363946 added a config flag to tell WebRTC to set environment clock timestamps in RTCStats objects (rather then UTC timestamps). This CL set the config flag, and update the code to handle the new timestamps.

This change make all RTCStats timestamps be expressed as Performance time, fixing chromium:369369568.

Bug: chromium:369369568
Change-Id: Icc991ba55543bf13a17b526a1247043551e85bab
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5920098
Commit-Queue: Olov Brändström <brandstromchromium.org>
Reviewed-by: Harald Alvestrand <htachromium.org>
Reviewed-by: Henrik Boström <hboschromium.org>
Reviewed-by: Johannes Kron <kronchromium.org>
Cr-Commit-Position: refs/heads/main{#1368191}

--

wpt-commits: a2dc0053b4f1ed49b6d76155a2223fdae25d9126
wpt-pr: 48592

UltraBlame original commit: 1ab48736e93517fc0f67b332ed90be08735b36c1

--- a/testing/web-platform/tests/webrtc/RTCPeerConnection-getStats-timestamp.https.html
+++ b/testing/web-platform/tests/webrtc/RTCPeerConnection-getStats-timestamp.https.html
@@ -131,6 +131,61 @@ as
 Wall
 Clock
 .
+/
+/
+TODO
+:
+crbug
+.
+com
+/
+372749742
+-
+Timestamps
+from
+RTCStats
+differs
+slightly
+from
+/
+/
+performance
+.
+timeOrigin
++
+performance
+.
+now
+(
+)
+.
+We
+add
+an
+epsilon
+to
+the
+/
+/
+timestamp
+checks
+as
+a
+workaround
+to
+avoid
+making
+the
+tests
+flaky
+.
+const
+kTimeEpsilon
+=
+0
+.
+2
+;
 promise_test
 (
 async
@@ -265,6 +320,13 @@ t0
 peerConnectionStats
 .
 timestamp
++
+kTimeEpsilon
+'
+t0
+<
+timestamp
+'
 )
 ;
 assert_less_than_equal
@@ -273,6 +335,13 @@ peerConnectionStats
 .
 timestamp
 t1
++
+kTimeEpsilon
+'
+timestamp
+<
+t1
+'
 )
 ;
 }
@@ -636,6 +705,13 @@ t0
 remoteInboundRtp
 .
 timestamp
++
+kTimeEpsilon
+'
+t0
+<
+timestamp
+'
 )
 ;
 assert_less_than_equal
@@ -644,6 +720,13 @@ remoteInboundRtp
 .
 timestamp
 t1
++
+kTimeEpsilon
+'
+timestamp
+<
+t1
+'
 )
 ;
 }
