Bug 1924455 [wpt PR 48591] - [wpt] Fail `VideoTrackGenerator-with-window-tracks.https.html` faster, a=testonly
Automatic update from web-platform-tests
[wpt] Fail `VideoTrackGenerator-with-window-tracks.https.html` faster

`VideoTrackGenerator` is not exposed to workers, which currently causes
the test to hang. Surface worker errors to the `promise_test()`s
instead.

Drive-by: always revoke the temporary script URL.

Bug: 40058895
Change-Id: Id0e3830abadecac7c76853235a09b201fdad1af0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5922435
Auto-Submit: Jonathan Lee <jonathanjleegoogle.com>
Reviewed-by: Harald Alvestrand <htachromium.org>
Commit-Queue: Jonathan Lee <jonathanjleegoogle.com>
Cr-Commit-Position: refs/heads/main{#1368294}

--

wpt-commits: 302e6e04c6c54bf3891e6a6a15a2e04e3f72bb52
wpt-pr: 48591

UltraBlame original commit: 378f7e6ed8f4dcc66625b9b97b785562ec614a6a

--- a/testing/web-platform/tests/mediacapture-insertable-streams/VideoTrackGenerator-with-window-tracks.https.html
+++ b/testing/web-platform/tests/mediacapture-insertable-streams/VideoTrackGenerator-with-window-tracks.https.html
@@ -573,29 +573,50 @@ Worker
 url
 )
 ;
+try
+{
 await
 new
 Promise
 (
-resolve
-=
->
-worker
-.
-onmessage
-=
 (
+resolve
+reject
 )
 =
 >
 {
+worker
+.
+onmessage
+=
 resolve
+;
+worker
+.
+onerror
+=
 (
+err
+)
+=
+>
+reject
+(
+err
+.
+message
 )
 ;
 }
 )
 ;
+return
+worker
+;
+}
+finally
+{
 URL
 .
 revokeObjectURL
@@ -603,9 +624,7 @@ revokeObjectURL
 url
 )
 ;
-return
-worker
-;
+}
 }
 promise_test
 (
