--- a/testing/web-platform/tests/css/css-color/parsing/color-computed-relative-color.html
+++ b/testing/web-platform/tests/css/css-color/parsing/color-computed-relative-color.html
@@ -3217,6 +3217,107 @@ rebeccapurple
 ;
 /
 /
+Nesting
+inside
+light
+-
+dark
+(
+)
+fuzzy_test_computed_color
+(
+light
+-
+dark
+(
+rgb
+(
+from
+rebeccapurple
+r
+g
+b
+)
+rgb
+(
+from
+rebeccapurple
+r
+g
+b
+)
+)
+color
+(
+srgb
+0
+.
+4
+0
+.
+2
+0
+.
+6
+)
+)
+;
+fuzzy_test_computed_color
+(
+light
+-
+dark
+(
+color
+-
+mix
+(
+in
+srgb
+rgb
+(
+from
+rebeccapurple
+none
+g
+b
+)
+rebeccapurple
+)
+color
+-
+mix
+(
+in
+srgb
+rgb
+(
+from
+rebeccapurple
+none
+g
+b
+)
+rebeccapurple
+)
+)
+color
+(
+srgb
+0
+.
+4
+0
+.
+2
+0
+.
+6
+)
+)
+;
+/
+/
 hsl
 (
 from
