Bug 1924605 [wpt PR 48611] - [reading-flow] display: contents participate in the flow, a=testonly
Automatic update from web-platform-tests
[reading-flow] display: contents participate in the flow

From CSSWG resolution [1]:
> display:contents focusable element occurs immediately before its first child in visual order

[1] https://github.com/w3c/csswg-drafts/issues/9230#issuecomment-2369780005

Currently, reading flow items in display: contents are ignored and
display: contents elements are visited last in the focus order.
That means we lose that order information.

We update the algorithm so when we loop reading items and find one that
is not in the focus scope, we traverse its parent to find an ancestor
that is. This element can then be added in the reading flow instead.

We update A11Y to behave the same way as focus navigation. Since the
A11Y tree uses LayoutTreeBuilder, we update the algorithm to loop
through each reading flow item's ancestor until its parent is the
LayoutTreeBuilderTraversal::Parent. This element can then be added in
the reading flow instead.

Change-Id: I1c3c3ab3a6548611af9a2cfddecc9d889b0ecb14
Bug: 371024057
Bug: 40932006
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5924454
Commit-Queue: Di Zhang <dizhanggchromium.org>
Reviewed-by: Mason Freed <masonfchromium.org>
Cr-Commit-Position: refs/heads/main{#1368523}

--

wpt-commits: 078000e068347d9558ff63ceb84510aad5953725
wpt-pr: 48611

UltraBlame original commit: 98d9d2eab45c9af3379a7b46c7a407389ce941e3

--- a/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-across-scopes.html
+++ b/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-across-scopes.html
@@ -255,26 +255,6 @@ style
 -
 -
 Since
-C
-is
-a
-direct
-reading
-flow
-item
-it
-is
-visited
-first
-.
--
--
->
-<
-!
--
--
-Since
 B
 A
 are
@@ -286,7 +266,28 @@ contents
 they
 are
 visited
-after
+together
+.
+-
+-
+>
+<
+!
+-
+-
+Since
+B
+has
+order
+1
+its
+display
+:
+contents
+parent
+is
+visited
+first
 .
 -
 -
@@ -305,9 +306,9 @@ data
 expect
 =
 "
-C
 B
 A
+C
 "
 data
 -
