--- a/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-display-contents.html
+++ b/testing/web-platform/tests/shadow-dom/focus-navigation/reading-flow/tentative/grid-order-with-display-contents.html
@@ -280,9 +280,9 @@ expect
 =
 "
 order1
-order3
 order2
 order4
+order3
 "
 data
 -
@@ -299,6 +299,17 @@ in
 same
 grid
 container
+and
+are
+placed
+in
+the
+position
+where
+their
+first
+child
+resides
 .
 "
 >
@@ -446,10 +457,10 @@ expect
 "
 div1B
 order1B
-order3B
 div2B
 order2B
 order4B
+order3B
 "
 data
 -
@@ -466,18 +477,27 @@ in
 same
 grid
 container
-with
-focusable
+and
+are
+placed
+in
+the
+position
+where
+their
+first
+child
+resides
+.
+The
 display
 contents
-divs
-at
-the
-end
-of
-the
-focus
-sequence
+have
+tabindex
+and
+should
+be
+focusable
 .
 "
 >
@@ -643,18 +663,18 @@ data
 expect
 =
 "
-A1
-A2
-A3
-B1
-B2
-B3
 C1
 C2
 C3
 D1
 D2
 D3
+B1
+B2
+B3
+A1
+A2
+A3
 "
 data
 -
@@ -676,7 +696,7 @@ containers
 div
 class
 =
-box
+wrapper
 >
 <
 div
