Bug 1924799 [wpt PR 48626] - Navigation API: deduplicate some tests using variants, a=testonly
Automatic update from web-platform-tests
Navigation API: deduplicate some tests using variants

Fixed: 40217734
Change-Id: I4ef5ab2c11d3eb4a7e71a57276da39083e0ba9c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5933484
Auto-Submit: Domenic Denicola <domenicchromium.org>
Reviewed-by: Nate Chapin <japhetchromium.org>
Commit-Queue: Nate Chapin <japhetchromium.org>
Cr-Commit-Position: refs/heads/main{#1368804}

--

wpt-commits: 44d400dc647c85fccaa1c8a2f2c97c8e9b1c01b7
wpt-pr: 48626

UltraBlame original commit: eca5abbfcd42786d0c5d98e6d576505d0ff984d1

--- a/testing/web-platform/tests/navigation-api/state/cross-document-away-and-back.html
+++ b/testing/web-platform/tests/navigation-api/state/cross-document-away-and-back.html
@@ -38,6 +38,54 @@ js
 script
 >
 <
+script
+src
+=
+"
+resources
+/
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+navigate
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+updateCurrentEntry
+"
+>
+<
 iframe
 id
 =
@@ -81,32 +129,17 @@ step_func
 =
 >
 {
+updateStateBasedOnTestVariant
+(
 i
 .
 contentWindow
-.
-navigation
-.
-navigate
-(
-"
-#
-"
-{
-history
-:
-"
-replace
-"
-state
-:
 {
 data
 :
 "
 value
 "
-}
 }
 )
 ;
