--- a/testing/web-platform/tests/navigation-api/state/cross-document-location-api.html
+++ b/testing/web-platform/tests/navigation-api/state/cross-document-location-api.html
@@ -38,6 +38,54 @@ js
 script
 >
 <
+script
+src
+=
+"
+resources
+/
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+navigate
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+updateCurrentEntry
+"
+>
+<
 iframe
 id
 =
@@ -81,32 +129,17 @@ step_func
 =
 >
 {
+updateStateBasedOnTestVariant
+(
 i
 .
 contentWindow
-.
-navigation
-.
-navigate
-(
-"
-#
-"
-{
-history
-:
-"
-replace
-"
-state
-:
 {
 data
 :
 "
 value
 "
-}
 }
 )
 ;
