--- a/testing/web-platform/tests/navigation-api/state/history-replaceState.html
+++ b/testing/web-platform/tests/navigation-api/state/history-replaceState.html
@@ -39,6 +39,54 @@ script
 >
 <
 script
+src
+=
+"
+resources
+/
+helpers
+.
+js
+"
+>
+<
+/
+script
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+navigate
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+method
+=
+updateCurrentEntry
+"
+>
+<
+script
 >
 test
 (
@@ -47,28 +95,15 @@ test
 =
 >
 {
-navigation
-.
-navigate
+updateStateBasedOnTestVariant
 (
-"
-#
-"
-{
-history
-:
-"
-replace
-"
-state
-:
+window
 {
 data
 :
 "
 value
 "
-}
 }
 )
 ;
